BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/OTC_Price_Matrix_BMS_CN__c.object
<CustomObject>
    <description>Unit Price Matrix of OTC Product for China</description>
    <fields>
        <fullName>BC_BMS_CN__c</fullName>
        <description>BC</description>
        <label>BC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_BMS_CN__c</fullName>
        <description>BD</description>
        <label>BD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BL_BMS_CN__c</fullName>
        <description>BL</description>
        <label>BL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_BMS_CN__c</fullName>
        <description>BP</description>
        <label>BP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Covered_Product_BMS_CN__c</fullName>
        <description>Covered Product</description>
        <label>Covered Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DN_BMS_CN__c</fullName>
        <description>DN</description>
        <label>DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_BMS_CN__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>采购部门</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>产科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿保科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿内科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿外科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>耳鼻喉咽科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>发热门诊</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>放疗科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妇科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>肝病科(中心)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>肝胆外科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>肝炎科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>肝移植科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>感(传)染科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>呼吸科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>急救科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>检验科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>精神科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>口腔科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>老年科/干部科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泌尿外科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>内分泌科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>皮肤科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>普内/大内科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>普内科/中医院内科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>普通外科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>乳腺外科</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spec_Code_BMS_CN__c</fullName>
        <description>Spec Code</description>
        <label>Spec Code</label>
        <picklist>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TG100_BMS_CN__c</fullName>
        <description>TG100</description>
        <label>TG100</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TG30_BMS_CN__c</fullName>
        <description>TG30</description>
        <label>TG30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TJC_BMS_CN__c</fullName>
        <description>TJC</description>
        <label>TJC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VB_BMS_CN__c</fullName>
        <description>VB</description>
        <label>VB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>OTC Price Matrix</label>
    <nameField>
        <displayFormat>P{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTC Price Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>